# tiktok-user-analyzer

./: .env.example  .gitignore  AI_WORKFLOW.md  Dockerfile  README.md  demo_run.py  docker-compose.yml  pyproject.toml  test_scrape.py  test_ytdlp.py
cli/: __init__.py  main.py
src/: __init__.py  config.py  logging_config.py  pipeline.py
src/agent/: __init__.py  chat_agent.py  memory.py  prompts.py  tools.py
src/analyzer/: __init__.py  models.py  profile_generator.py  video_analyzer.py
src/api/: __init__.py  app.py
src/scraper/: __init__.py  frame_extractor.py  models.py  tiktok_scraper.py  video_downloader.py  ytdlp_scraper.py
src/storage/: __init__.py  db_models.py  repository.py
tests/: __init__.py  conftest.py
tests/integration/: test_integration.py
tests/system/: test_system.py
tests/unit/test_agent/: test_agent.py
tests/unit/test_analyzer/: test_analyzers.py  test_models.py
tests/unit/test_api/: test_app.py
tests/unit/test_scraper/: test_frame_extractor.py  test_models.py  test_tiktok_scraper.py
tests/unit/test_storage/: test_repository.py
