[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tiktok-user-analyzer"
version = "0.1.0"
description = "AI-powered TikTok user profiling and analysis agent"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Yu Wang", email = "yu.wang@aya.yale.edu"},
]
keywords = ["tiktok", "ai", "agent", "user-analysis", "llm", "multimodal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "anthropic>=0.39.0",
    "playwright>=1.49.0",
    "beautifulsoup4>=4.12.0",
    "Pillow>=11.0.0",
    "opencv-python-headless>=4.10.0",
    "rich>=13.9.0",
    "click>=8.1.0",
    "tenacity>=9.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.12",
    "yt-dlp>=2024.11.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "factory-boy>=3.3.0",
    "faker>=33.0.0",
    "respx>=0.21.0",
    "aiosqlite>=0.20.0",
]

[project.scripts]
tiktok-analyzer = "cli.main:cli"

[tool.setuptools.packages.find]
include = ["src*", "cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "system: System/E2E tests",
    "slow: Slow-running tests",
]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
